@@ -6,11 +6,13 @@
   Fix issue MR-79 - MoveUp/Down item doesn't work + Sort button broken
   Fix issue MR-80 - Reconnect previous sessions
   Fix issue MR-93 - Regional settings problem when using SQL connection in mRemoteNG
+  Fix issue MR-96 - When pressing SHIFT+F4 to create a new connection inside a folder, the new connections doesn't inherit any properties from its parent
   Fix issue MR-97 - Integrate Dutch translation
   Fix issue MR-98 - Integrate Russian and Ukranian translations
   Fix issue MR-99 - Integrate Spanish translation
   Fix issue MR-101 - Collapse all folders causes a NullReferenceException
   Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
+  Fix issue MR-166 - Inheritance button is disabled on some connections
   Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
   Fix issue MR-176 - Del key while editing connection name triggers 'Delete Connection'
   Fix issue MR-181 - Sessions on startup
